gerando planilhas com as musicas

--- a/1 - Buscando musicas mais ouvidas nas radios.ipynb
+++ b/1 - Buscando musicas mais ouvidas nas radios.ipynb
@@ -1,253 +1,311 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Obtendo dados do site MaisTocadas anualmente"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste notebook, vamos buscar as listas de músicas mais tocadas nas rádios anualmente de 1980 a 2016."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import bs4\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://maistocadas.mus.br/'\n",
-    "headers = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.135 Safari/537.36 Edge/12.246'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.17"
+    },
+    "colab": {
+      "name": "1 - Buscando musicas mais ouvidas nas radios.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
     }
-   ],
-   "source": [
-    "musicas_populares = []\n",
-    "\n",
-    "for ano in range(1980, 2017):\n",
-    "    r = requests.get(url + str(ano), {'headers': headers})\n",
-    "    soup = bs4.BeautifulSoup(r.content, 'html.parser')\n",
-    "    print ano\n",
-    "\n",
-    "    posicao = 1\n",
-    "    for li in soup.find('ol'):\n",
-    "        faixa = li.find('span', {'class': 'musicas'}).get_text(strip=True).encode('utf-8') #.text[1:].encode('utf-8'),\n",
-    "        artista = li.find('span', {'class': 'artista'}).get_text(strip=True).encode('utf-8') #.text[1:].encode('utf-8')\n",
-    "        \n",
-    "        musicas_populares.append({\n",
-    "            'posicao': posicao,\n",
-    "            'musica': faixa,\n",
-    "            'artista': artista,\n",
-    "            'ano': ano\n",
-    "        })\n",
-    "        posicao += 1\n"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>posicao</th>\n",
-       "      <th>musica</th>\n",
-       "      <th>artista</th>\n",
-       "      <th>ano</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Balancê</td>\n",
-       "      <td>Gal Costa</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Another Brick In The Wall</td>\n",
-       "      <td>Pink Floyd</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Crazy Little Thing Called Love</td>\n",
-       "      <td>Queen</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Momentos</td>\n",
-       "      <td>Joanna</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Menino do Rio</td>\n",
-       "      <td>Baby Consuelo</td>\n",
-       "      <td>1980</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   posicao                          musica        artista   ano\n",
-       "0        1                         Balancê      Gal Costa  1980\n",
-       "1        2       Another Brick In The Wall     Pink Floyd  1980\n",
-       "2        3  Crazy Little Thing Called Love          Queen  1980\n",
-       "3        4                        Momentos         Joanna  1980\n",
-       "4        5                   Menino do Rio  Baby Consuelo  1980"
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ed7uSNbQ2cH5"
+      },
+      "source": [
+        "# Obtendo dados do site MaisTocadas anualmente"
       ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h0_-2xNc2cH9"
+      },
+      "source": [
+        "Neste notebook, vamos buscar as listas de músicas mais tocadas nas rádios anualmente de 1980 a 2016."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SciCVljh2cH-"
+      },
+      "source": [
+        "import requests\n",
+        "import bs4\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "from datetime import timedelta, date"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kaiqox1j2cH-"
+      },
+      "source": [
+        "url = 'https://maistocadas.mus.br/'\n",
+        "headers = {\n",
+        "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.135 Safari/537.36 Edge/12.246'\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPJ8XhHz2cH_"
+      },
+      "source": [
+        "musicas_populares = []\n",
+        "\n",
+        "for ano in range(1980, 2017):\n",
+        "    r = requests.get(url + str(ano), {'headers': headers})\n",
+        "    soup = bs4.BeautifulSoup(r.content, 'html.parser')\n",
+        "\n",
+        "    posicao = 1\n",
+        "    for li in soup.find('ol'):\n",
+        "        faixa = li.find('span', {'class': 'musicas'}).get_text(strip=True)\n",
+        "        artista = li.find('span', {'class': 'artista'}).get_text(strip=True)\n",
+        "        \n",
+        "        musicas_populares.append({\n",
+        "            'posicao': posicao,\n",
+        "            'musica': faixa,\n",
+        "            'artista': artista,\n",
+        "            'ano': ano\n",
+        "        })\n",
+        "        posicao += 1\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "cY1Kt6V_2cIA",
+        "outputId": "08b49aa9-5c08-4214-b390-120f46b7cfa1"
+      },
+      "source": [
+        "df = pd.DataFrame(musicas_populares, columns=['posicao', 'musica', 'artista', 'ano'])\n",
+        "df.head(5)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>posicao</th>\n",
+              "      <th>musica</th>\n",
+              "      <th>artista</th>\n",
+              "      <th>ano</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Balancê</td>\n",
+              "      <td>Gal Costa</td>\n",
+              "      <td>1980</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Another Brick In The Wall</td>\n",
+              "      <td>Pink Floyd</td>\n",
+              "      <td>1980</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Crazy Little Thing Called Love</td>\n",
+              "      <td>Queen</td>\n",
+              "      <td>1980</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Momentos</td>\n",
+              "      <td>Joanna</td>\n",
+              "      <td>1980</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Menino do Rio</td>\n",
+              "      <td>Baby Consuelo</td>\n",
+              "      <td>1980</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   posicao                          musica        artista   ano\n",
+              "0        1                         Balancê      Gal Costa  1980\n",
+              "1        2       Another Brick In The Wall     Pink Floyd  1980\n",
+              "2        3  Crazy Little Thing Called Love          Queen  1980\n",
+              "3        4                        Momentos         Joanna  1980\n",
+              "4        5                   Menino do Rio  Baby Consuelo  1980"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "outj6iwp2cIA"
+      },
+      "source": [
+        "df.to_excel('musicas-1980-2016.xlsx', engine='openpyxl')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YWNtDub52cIA"
+      },
+      "source": [
+        "# Buscando listas do site Spotify Charts"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r8P3Ip312cIB"
+      },
+      "source": [
+        "Agora, vamos buscar as músicas mais ouvidas no serviço de streaming Spotify entre os anos de 2017 e 2021. Através do site SpotifyCharts é possível obter semanalmente a lista de músicas mais ouvidas e no final fazer um somatório ano a ano.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "py4Yw6yH2cIB"
+      },
+      "source": [
+        "nome_arquivo = '/content/regional-br-weekly-{0}--{1}.csv' #regional-br-weekly-2017-01-13--2017-01-20\n",
+        "url = 'https://spotifycharts.com/regional/br/weekly/{0}--{1}/download'\n",
+        "data_final = date(2021,1,1)\n",
+        "data = date(2016,12,30)\n",
+        "\n",
+        "dataframe_2017 = pd.DataFrame(columns=['Position',\t'Track Name',\t'Artist',\t'Streams', 'URL', 'Week'])\n",
+        "dataframe_2018 = pd.DataFrame(columns=['Position',\t'Track Name',\t'Artist',\t'Streams', 'URL', 'Week'])\n",
+        "dataframe_2019 = pd.DataFrame(columns=['Position',\t'Track Name',\t'Artist',\t'Streams', 'URL', 'Week'])\n",
+        "dataframe_2020 = pd.DataFrame(columns=['Position',\t'Track Name',\t'Artist',\t'Streams', 'URL', 'Week'])\n",
+        "\n",
+        "while (data < data_final):\n",
+        "  inicio = data \n",
+        "  fim = data + timedelta(7)\n",
+        "\n",
+        "  df = pd.read_csv(nome_arquivo.format(inicio.strftime(\"%Y-%m-%d\"), fim.strftime(\"%Y-%m-%d\")), skiprows=[0])\n",
+        "  df['Week'] = inicio\n",
+        "  if (inicio.strftime(\"%Y\") == '2017'):\n",
+        "    dataframe_2017 = pd.concat([dataframe_2017, df])\n",
+        "  elif (inicio.strftime(\"%Y\") == '2018'):\n",
+        "    dataframe_2018 = pd.concat([dataframe_2018, df])\n",
+        "  elif (inicio.strftime(\"%Y\") == '2019'):\n",
+        "    dataframe_2019 = pd.concat([dataframe_2019, df])\n",
+        "  elif (inicio.strftime(\"%Y\") == '2020'):\n",
+        "    dataframe_2020 = pd.concat([dataframe_2020, df])\n",
+        "\n",
+        "  data = fim"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JcIiY5QhcjT3"
+      },
+      "source": [
+        "dataframe_2017 = dataframe_2017.groupby(by=['Track Name', 'Artist'], sort='Streams').sum()\n",
+        "dataframe_2017.sort_values(by='Streams', ascending=False, inplace=True)\n",
+        "dataframe_2018 = dataframe_2018.groupby(by=['Track Name', 'Artist'], sort='Streams').sum()\n",
+        "dataframe_2018.sort_values(by='Streams', ascending=False, inplace=True)\n",
+        "dataframe_2019 = dataframe_2019.groupby(by=['Track Name', 'Artist'], sort='Streams').sum()\n",
+        "dataframe_2019.sort_values(by='Streams', ascending=False, inplace=True)\n",
+        "dataframe_2020 = dataframe_2020.groupby(by=['Track Name', 'Artist'], sort='Streams').sum()\n",
+        "dataframe_2020.sort_values(by='Streams', ascending=False, inplace=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m3JYRzRrrfsn"
+      },
+      "source": [
+        "dataframe_2017.to_excel('spotify-2017.xlsx', engine='openpyxl')\n",
+        "dataframe_2018.to_excel('spotify-2018.xlsx', engine='openpyxl')\n",
+        "dataframe_2019.to_excel('spotify-2019.xlsx', engine='openpyxl')\n",
+        "dataframe_2020.to_excel('spotify-2020.xlsx', engine='openpyxl')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sdwah69ZTZiB"
+      },
+      "source": [
+        ""
+      ]
     }
-   ],
-   "source": [
-    "df = pd.DataFrame(musicas_populares, columns=['posicao', 'musica', 'artista', 'ano'])\n",
-    "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.to_excel('file.xlsx', engine='openpyxl')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Buscando listas do site Spotify Charts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  ]
 }
