--- a/2 - Buscando atributos das músicas selecionadas.ipynb
+++ b/2 - Buscando atributos das músicas selecionadas.ipynb
@@ -21,7 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '3b521738dce44ad9a00639075fd2d8f3'\n",
+    "# Preencher com client_id gerado através do link developer.spotify.com/dashboard/\n",
+    "client_id = '3b521738dce44ad9a00639075fd2d8f3' \n",
     "client_secret = '65d7a7bcf9ac4b4396adc837ba6cb924'"
    ]
   },
@@ -92,7 +93,9 @@
     "        elif token == None:\n",
     "            self.perform_auth()\n",
     "            return self.get_access_token() \n",
-    "        return token"
+    "        return token\n",
+    "\n",
+    "# Código fonte: codingforentrepreneurs.com/"
    ]
   },
   {
