--- a/2 - Buscando atributos das músicas selecionadas.ipynb
+++ b/2 - Buscando atributos das músicas selecionadas.ipynb
@@ -32,70 +32,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SpotifyAPI(object):\n",
-    "    access_token = None\n",
-    "    access_token_expires = datetime.datetime.now()\n",
-    "    access_token_did_expire = True\n",
-    "    client_id = None\n",
-    "    client_secret = None\n",
-    "    token_url = \"https://accounts.spotify.com/api/token\"\n",
+    "def gerar_client_credentials_base64(client_id, client_secret):\n",
+    "    client_creds = f\"{client_id}:{client_secret}\"\n",
+    "    client_creds_base64 = base64.b64encode(client_creds.encode())\n",
     "    \n",
-    "    def __init__(self, client_id, client_secret, *args, **kwargs):\n",
-    "        super(SpotifyAPI, self).__init__(*args, **kwargs)\n",
+    "    return client_creds_base64.decode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SpotifyAPI(object):\n",
+    "    access_token = ''\n",
+    "    expires_in = ''\n",
+    "    client_id = ''\n",
+    "    client_secret = ''\n",
+    "    url = \"https://accounts.spotify.com/api/token\"\n",
+    "    \n",
+    "    def __init__(self, client_id, client_secret):\n",
+    "        super().__init__()\n",
     "        self.client_id = client_id\n",
     "        self.client_secret = client_secret\n",
+    "        \n",
+    "    def autenticacao(self):\n",
+    "        r = requests.post(\n",
+    "            self.url, \n",
+    "            data={\n",
+    "                \"grant_type\": \"client_credentials\"\n",
+    "            }, \n",
+    "            headers={\n",
+    "                \"Authorization\": f\"Basic {gerar_client_credentials_base64(self.client_id, self.client_secret)}\"\n",
+    "            })\n",
     "\n",
-    "    def get_client_credentials(self):\n",
-    "        client_id = self.client_id\n",
-    "        client_secret = self.client_secret\n",
-    "        if client_secret == None or client_id == None:\n",
-    "            raise Exception(\"client_id e client_secret invalidos\")\n",
-    "        client_creds = \"{}:{}\".format(client_id, client_secret)\n",
-    "        client_creds_b64 = base64.b64encode(client_creds.encode())\n",
-    "        return client_creds_b64.decode()\n",
-    "    \n",
-    "    def get_token_headers(self):\n",
-    "        client_creds_b64 = self.get_client_credentials()\n",
-    "        return {\n",
-    "            \"Authorization\": \"Basic {}\".format(client_creds_b64)\n",
-    "        }\n",
-    "    \n",
-    "    def get_token_data(self):\n",
-    "        return {\n",
-    "            \"grant_type\": \"client_credentials\"\n",
-    "        } \n",
-    "    \n",
-    "    def perform_auth(self):\n",
-    "        token_url = self.token_url\n",
-    "        token_data = self.get_token_data()\n",
-    "        token_headers = self.get_token_headers()\n",
-    "        r = requests.post(token_url, data=token_data, headers=token_headers)\n",
-    "        if r.status_code not in range(200, 299):\n",
-    "            raise Exception(\"Não foi possível autenticar.\")\n",
-    "            # return False\n",
-    "        data = r.json()\n",
-    "        now = datetime.datetime.now()\n",
-    "        access_token = data['access_token']\n",
-    "        expires_in = data['expires_in'] # seconds\n",
-    "        expires = now + datetime.timedelta(seconds=expires_in)\n",
-    "        self.access_token = access_token\n",
-    "        self.access_token_expires = expires\n",
-    "        self.access_token_did_expire = expires < now\n",
-    "        return True\n",
-    "    \n",
-    "    def get_access_token(self):\n",
-    "        token = self.access_token\n",
-    "        expires = self.access_token_expires\n",
-    "        now = datetime.datetime.now()\n",
-    "        if expires < now:\n",
-    "            self.perform_auth()\n",
-    "            return self.get_access_token()\n",
-    "        elif token == None:\n",
-    "            self.perform_auth()\n",
-    "            return self.get_access_token() \n",
-    "        return token\n",
-    "\n",
-    "# Código fonte: codingforentrepreneurs.com/"
+    "        if r.status_code == 200:\n",
+    "            resposta = r.json()\n",
+    "            \n",
+    "            self.access_token = resposta['access_token']\n",
+    "            \n",
+    "            return True\n",
+    "        return False"
    ]
   },
   {
@@ -105,7 +83,7 @@
    "outputs": [],
    "source": [
     "spotify = SpotifyAPI(client_id, client_secret)\n",
-    "spotify.perform_auth()"
+    "spotify.autenticacao()"
    ]
   },
   {
